--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-pdf/renderer": "^3.1.15",
     "@upstash/redis": "^1.25.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "lucide-react": "^0.293.0",
+    "lucide-react": "^0.303.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.0.3",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
@@ -32,7 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
 }
