--- a/package.json
+++ b/package.json
@@ -1,41 +1,57 @@
 {
   "name": "gvizoso",
-  "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "check": "biome check --write .",
+    "check-types": "bun run check-types",
+    "build": "vite build",
+    "serve": "vite preview",
+    "dev": "vite dev --port=4500"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
-    "@react-pdf/renderer": "^3.1.15",
-    "@upstash/redis": "^1.25.1",
-    "@vercel/analytics": "^1.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "date-fns": "^2.30.0",
-    "lucide-react": "^0.303.0",
-    "mini-svg-data-uri": "^1.4.4",
-    "next": "14.0.3",
-    "next-mdx-remote": "^4.4.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-tweet": "^3.1.1",
-    "sugar-high": "^0.5.5",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/lora": "^5.2.8",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-form": "^1.23.5",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-router": "^1.132.31",
+    "@tanstack/react-router-with-query": "^1.130.17",
+    "@tanstack/react-start": "^1.132.31",
+    "@tanstack/router-plugin": "^1.132.31",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
+    "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^4.0.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5"
-  }
+    "@biomejs/biome": "2.2.5",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tanstack/react-query-devtools": "^5.85.5",
+    "@tanstack/react-router-devtools": "^1.132.31",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
+    "@types/node": "^22.13.11",
+    "@types/react": "~19.1.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^5.0.4",
+    "jsdom": "^26.0.0",
+    "tsdown": "^0.15.5",
+    "typescript": "^5.7.2",
+    "ultracite": "5.6.2",
+    "vite": "^7.0.2",
+    "web-vitals": "^5.0.3"
+  },
+  "packageManager": "bun@1.2.2"
 }
