--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/lora": "^5.2.8",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-form": "^1.23.5",
@@ -22,12 +23,14 @@
     "@tanstack/router-plugin": "^1.132.31",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "shiki": "^3.13.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.3",
@@ -37,6 +40,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.5",
+    "@content-collections/core": "^0.11.1",
+    "@content-collections/mdx": "^0.2.2",
+    "@content-collections/vite": "^0.2.7",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-router-devtools": "^1.132.31",
