--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "check-types": "bun run check-types",
     "build": "vite build",
     "serve": "vite preview",
-    "dev": "vite dev --port=4500"
+    "dev": "vite dev --port=4500",
+    "start": "node .output/server/index.mjs"
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
