--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^26.0.0",
+    "nitro": "^3.0.1-alpha.0",
     "tsdown": "^0.15.5",
     "typescript": "^5.7.2",
     "ultracite": "5.6.2",
