--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@tailwindcss/vite": "^4.1.8",
+    "@takumi-rs/core": "^0.36.0",
+    "@takumi-rs/helpers": "^0.36.0",
+    "@takumi-rs/image-response": "^0.36.0",
     "@tanstack/react-form": "^1.23.5",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.132.31",
