--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,7 @@
   "functions": {
     "og": {
       "runtime": "nodejs20.x",
-      "includeFiles": [
-        "node_modules/@takumi-rs/core/**",
-        "node_modules/@takumi-rs/core-*/**"
-      ]
+      "includeFiles": "node_modules/@takumi-rs/core-*/**"
     }
   }
 }
