--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "installCommand": "npm install"
+  "installCommand": "npm cache clean --force && npm install --legacy-peer-deps",
+  "buildCommand": "npm run build"
 }
