--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "@react-pdf/renderer": "^3.1.15",
+    "@takumi-rs/core": "^0.36.1",
+    "@takumi-rs/helpers": "^0.36.1",
+    "@takumi-rs/image-response": "^0.36.1",
     "@upstash/redis": "^1.25.1",
     "@vercel/analytics": "^1.1.1",
     "class-variance-authority": "^0.7.0",
@@ -18,7 +21,7 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.303.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.0.3",
+    "next": "^15.5.5",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
