--- a/package.json
+++ b/package.json
@@ -1,70 +1,77 @@
 {
-  "name": "gvizoso",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "check": "biome check --write .",
-    "check-types": "bun run check-types",
-    "build": "vite build",
-    "serve": "vite preview",
-    "dev": "vite dev --port=4500",
-    "start": "node .output/server/index.mjs"
-  },
-  "dependencies": {
-    "@fontsource-variable/inter": "^5.2.8",
-    "@fontsource-variable/lora": "^5.2.8",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@tailwindcss/vite": "^4.1.8",
-    "@takumi-rs/core": "^0.36.1",
-    "@takumi-rs/core-linux-x64-gnu": "^0.36.1",
-    "@takumi-rs/helpers": "^0.36.1",
-    "@takumi-rs/image-response": "^0.36.1",
-    "@takumi-rs/wasm": "^0.36.1",
-    "@tanstack/react-form": "^1.23.5",
-    "@tanstack/react-query": "^5.85.5",
-    "@tanstack/react-router": "^1.132.31",
-    "@tanstack/react-router-with-query": "^1.130.17",
-    "@tanstack/react-start": "^1.132.31",
-    "@tanstack/router-plugin": "^1.132.31",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "dotenv": "^17.2.2",
-    "lucide-react": "^0.525.0",
-    "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "shiki": "^3.13.0",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.3",
-    "tw-animate-css": "^1.2.5",
-    "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.0.2"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.2.5",
-    "@content-collections/core": "^0.11.1",
-    "@content-collections/mdx": "^0.2.2",
-    "@content-collections/vite": "^0.2.7",
-    "@tailwindcss/typography": "^0.5.19",
-    "@tanstack/react-query-devtools": "^5.85.5",
-    "@tanstack/react-router-devtools": "^1.132.31",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.13.11",
-    "@types/react": "~19.1.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^5.0.4",
-    "jsdom": "^26.0.0",
-    "nitro": "^3.0.1-alpha.0",
-    "tsdown": "^0.15.5",
-    "typescript": "^5.7.2",
-    "ultracite": "5.6.2",
-    "vite": "^7.0.2",
-    "web-vitals": "^5.0.3"
-  },
-  "packageManager": "bun@1.2.2"
+	"name": "gvizoso",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"check": "biome check --write .",
+		"check-types": "bun run check-types",
+		"build": "vite build",
+		"serve": "vite preview",
+		"dev": "vite dev --port=4500",
+		"start": "node .output/server/index.mjs"
+	},
+	"dependencies": {
+		"@fontsource-variable/inter": "^5.2.8",
+		"@fontsource-variable/lora": "^5.2.8",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@tailwindcss/vite": "^4.1.8",
+		"@takumi-rs/core": "^0.36.1",
+		"@takumi-rs/core-linux-x64-gnu": "^0.36.1",
+		"@takumi-rs/helpers": "^0.36.1",
+		"@takumi-rs/image-response": "^0.36.1",
+		"@takumi-rs/wasm": "^0.36.1",
+		"@tanstack/react-form": "^1.23.5",
+		"@tanstack/react-query": "^5.85.5",
+		"@tanstack/react-router": "^1.132.31",
+		"@tanstack/react-router-with-query": "^1.130.17",
+		"@tanstack/react-start": "^1.132.31",
+		"@tanstack/router-plugin": "^1.132.31",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"dotenv": "^17.2.2",
+		"lucide-react": "^0.525.0",
+		"next-themes": "^0.4.6",
+		"radix-ui": "^1.4.3",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"shiki": "^3.13.0",
+		"sonner": "^2.0.3",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.3",
+		"tw-animate-css": "^1.2.5",
+		"vite-tsconfig-paths": "^5.1.4",
+		"zod": "^4.0.2"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.2.5",
+		"@content-collections/core": "^0.11.1",
+		"@content-collections/mdx": "^0.2.2",
+		"@content-collections/vite": "^0.2.7",
+		"@tailwindcss/typography": "^0.5.19",
+		"@tanstack/react-query-devtools": "^5.85.5",
+		"@tanstack/react-router-devtools": "^1.132.31",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/react": "^16.2.0",
+		"@types/node": "^22.13.11",
+		"@types/react": "~19.1.10",
+		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react": "^5.0.4",
+		"jsdom": "^26.0.0",
+		"nitro": "^3.0.1-alpha.0",
+		"tsdown": "^0.15.5",
+		"typescript": "^5.7.2",
+		"ultracite": "5.6.2",
+		"vite": "^7.0.2",
+		"vite-plugin-wasm": "^3.5.0",
+		"web-vitals": "^5.0.3"
+	},
+	"optionalDependencies": {
+		"@takumi-rs/core-darwin-arm64": "0.36.1",
+		"@takumi-rs/core-darwin-x64": "0.36.1",
+		"@takumi-rs/core-linux-x64-gnu": "0.36.1",
+		"@takumi-rs/core-linux-arm64-gnu": "0.36.1"
+	},
+	"packageManager": "bun@1.2.2"
 }
