--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "typescript": "^5.7.2",
     "ultracite": "5.6.2",
     "vite": "^7.0.2",
+    "vite-plugin-arraybuffer": "^0.1.1",
     "vite-plugin-wasm": "^3.5.0",
     "web-vitals": "^5.0.3"
   },
