--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/lora": "^5.2.8",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
+    "@react-pdf/renderer": "^4.3.1",
     "@tailwindcss/vite": "^4.1.8",
     "@takumi-rs/core": "^0.36.1",
     "@takumi-rs/helpers": "^0.36.1",
